--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
-}
+/* 1st project */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    /* .listContainer{
+        transition: opacity 3s ease-in-out;
+    }
+    .listContainer.listEmpty{
+        opacity: 0;
+    } */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .infoContainer {
+        transition: max-height 3s ease-in-out;
+        overflow: hidden;
+        max-height: 200px;
+      }
+      
+      .infoContainer.expanded {
+        max-height: none;
+      }
+      
