--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,34 @@
       border: 10px solid green;
     }
       
+    .section-center {
+      margin: 0 auto;
+      margin-top: 4rem;
+      width: 80vw;
+      height: 450px;
+      max-width: 800px;
+      text-align: center;
+      position: relative;
+      display: flex;
+      overflow: hidden;
+    }
+
+    article {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      /* transition: var(--transition); */
+    }
+    article.activeSlide {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    article.lastSlide {
+      transform: translateX(-100%);
+    }
+    article.nextSlide {
+      transform: translateX(100%);
+    }
